# hashlife-wasm

./: .gitignore  .gitlab-ci.yml  Cargo.toml  LICENSE  LICENSE_MIT  Makefile.toml  README.md  clippy.toml
benches/: bench.rs
src/: app.rs  fps.rs  game.rs  gameoflife.rs  lib.rs  universe.rs  utils.rs
src/universe/: mod.rs  morton.rs  node.rs  rect.rs
static/: index.html  styles.css
tests/: web.rs
www/: index.html  index.js  package-lock.json
