[package]
name = "wasm-gameoflife"
version = "0.1.0"
authors = ["Rachel Powers <powers.e.rachel@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["wee_alloc", "yew"]
no-wasm = []
yew = ["dep:yew"]
bevy = ["dep:bevy"]


[dependencies]
yew = { version = "<=0.18",  optional = true }
wasm-bindgen = "0.2"
fixedbitset = "0.4.2"
bitvec = "1.0.1"
js-sys = "0.3.39"
rand = "0.8"
rand_chacha = "0.3"
bevy = {version = "0.8", optional = true}

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.1", optional = true }

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however.
#
# Unfortunately, `wee_alloc` requires nightly Rust when targeting wasm for now.
wee_alloc = { version = "0.4.2", optional = true }
getrandom = { version = "0.2.7", features = ["js"] }

[dependencies.web-sys]
version = "0.3.4"
features = [
  'CanvasRenderingContext2d',
  'Document',
  'Element',
  'HtmlElement',
  'HtmlCanvasElement',
  'Window',
  'Performance',
  'MouseEvent',
  'DomRect'
]

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = 3
lto = true
debug = true
